--- a/README
+++ b/README
@@ -13,8 +13,8 @@ You will need to install yowsup and parse (python-parse in Debian):
     pip install yowsup2 parse
 
 Then to configure this app, copy and edit the config file in YAML:
-    cp whatsapp_config.example whatsapp_config
-    vi whatsapp_config
+    cp config.yaml.example config.yaml
+    edit whatsapp_config
 
 You need to fill in all fields, here is a little description:
     phone: Your phone number using the international format (2 numbers), then
